Fixed job description overflowing text

--- a/src/Recruit.Career/wwwroot/css/site.css
+++ b/src/Recruit.Career/wwwroot/css/site.css
@@ -128,3 +128,7 @@ a.disabled {
     content: '/';
     margin-right: 5px;
 }
+
+.job-description {
+    overflow-wrap: break-word;
+}
